--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "my wetube app",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node index.js",
+    "start": "nodemon --exec babel-node init.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
