--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "helmet": "^4.1.1",
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.1.0",
     "postcss-loader": "^4.0.4",
