--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.1.0",
     "body-parser": "^1.19.0",
     "cli": "^1.0.1",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
@@ -28,6 +29,7 @@
     "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "postcss": "^8.1.1",
