github login added

--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "passport-oauth": "^1.0.0",
     "postcss": "^8.1.1",
     "postcss-cli": "^8.1.0",
     "postcss-loader": "^4.0.4",
