--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js ",
-    "dev:assets": "WEBPACK_ENV = development webpack -w",
-    "build:assets": "WEBPACK_ENV = production webpack"
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "corss-env WEBPACK_ENV=production webpack"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "cli": "^1.0.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
