--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@babel/node": "^7.10.5",
     "@babel/polyfill": "^7.12.1",
     "autoprefixer": "^10.0.1",
+    "aws-sdk": "^2.824.0",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cli": "^1.0.1",
     "connect-mongo": "^3.2.0",
@@ -28,6 +30,7 @@
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
